# Secret-Array-Breakthrough

./: .gitignore  ARCHITECTURE.md  Architecture_Design.md  CMakeLists.txt  DESIGN_REPORT.md  README.md  Report_Design_Section.md  STATUS.md  game_rules.markdown  report1.md  report2.md  report3.md  ~WRL0001.tmp  开题报告_填写内容.md
build_nogui/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  MatrixBreakthrough.sln  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  matrix_breakthrough.vcxproj  matrix_breakthrough.vcxproj.filters
data/: leaderboard.txt  progress.txt
data/puzzles/: builtin_01.txt  builtin_02.txt  builtin_03.txt
data/replays/: replay_20260523_004032.txt  replay_20260523_004212.txt  replay_20260523_132227.txt  replay_20260607_103305.txt  replay_20260612_111523.txt  replay_20260612_114937.txt  replay_20260614_153947.txt
include/controller/: AIPlayer.hpp  GameController.hpp  InputHandler.hpp
include/core/: Cell.hpp  GameState.hpp  Grid.hpp  MergeRule.hpp  Move.hpp
include/model/: FileManager.hpp  Leaderboard.hpp  Player.hpp  Progress.hpp  Puzzle.hpp  PuzzleManager.hpp  ReplayBuffer.hpp  ScoreRecord.hpp
include/view/: ConsoleRenderer.hpp  IRenderer.hpp  SFMLRenderer.hpp  SoundManager.hpp
src/: main.cpp
src/controller/: AIPlayer.cpp  GameController.cpp  InputHandler.cpp
src/core/: Cell.cpp  GameState.cpp  Grid.cpp  MergeRule.cpp  Move.cpp
src/model/: FileManager.cpp  Leaderboard.cpp  Player.cpp  Progress.cpp  Puzzle.cpp  PuzzleManager.cpp  ReplayBuffer.cpp  ScoreRecord.cpp
src/view/: ConsoleRenderer.cpp  SFMLRenderer.cpp  (+1 more)
(+18 files in other folders)
